WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284141
[iOS] MediaRecorder fails to generate a mp4
https://bugs.webkit.org/show_bug.cgi?id=284141
Summary
[iOS] MediaRecorder fails to generate a mp4
Jean-Yves Avenard [:jya]
Reported
2024-12-05 19:19:00 PST
https://jyavenard.github.io/htmltests/tests/MediaRecorder/
Press test H264 After 5s you should see a video of yourself. But you get a broken video instead.
Attachments
Add attachment
proposed patch, testcase, etc.
Jean-Yves Avenard [:jya]
Comment 1
2024-12-05 19:19:09 PST
rdar://141017179
Jean-Yves Avenard [:jya]
Comment 2
2024-12-05 19:21:53 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37524
EWS
Comment 3
2024-12-05 23:37:22 PST
Committed
287432@main
(08cb3b1c6e55): <
https://commits.webkit.org/287432@main
> Reviewed commits have been landed. Closing PR #37524 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug