[iOS] MediaRecorder fails to generate a mp4 https://bugs.webkit.org/show_bug.cgi?id=284141 rdar://141017179

Reviewed by Andy Estes.

Make the AVAssetWriter works in process.

Manually tested. Our automated tests are using simulator which doesn't use
out of process operations.

* Source/WebCore/PAL/pal/spi/cocoa/AVAssetWriterSPI.h:
* Source/WebCore/platform/mediarecorder/cocoa/MediaRecorderPrivateWriterAVFObjC.mm:
(WebCore::MediaRecorderPrivateWriterAVFObjC::allTracksAdded):

Canonical link: https://commits.webkit.org/287432@main